--- a/prueba.html
+++ b/prueba.html
@@ -40,6 +40,7 @@
          praesentium illum, soluta nostrum neque ratione ipsam dolores sed sit recusandae. Maxime, earum architecto.
         </p>
     </div>
+    <div id="cuadrado"></div>
 
 </body>
 </html>
