--- a/basura/prueba2.html
+++ b/basura/prueba2.html
@@ -45,5 +45,6 @@
             </tr>
     </tbody>
     </table>
+    <div id="cuadro"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores nostrum natus laborum adipisci ipsam error possimus cumque labore doloremque, recusandae dignissimos accusantium tenetur quia eligendi, eius repellat officia at excepturi.</p></div>
 </body>
 </html>
