--- a/Actividad3/c/index.html
+++ b/Actividad3/c/index.html
@@ -9,28 +9,28 @@
 </head>
 <body>
     <div class="contenedor">
+        <a href="http://www.nokia.com"></a><div id="titulo">
+            Nokia
+        </div></a>
+        <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit dolore alias distinctio,
+            esse ipsa quasi exercitationem nemo rem odit quo. Earum nam animi sed cupiditate ea eos 
+            ipsam? Dolorum, deserunt.
+        </p>
+    </div>
+    <div class="contenedor">
+        <a href="http://www.samsung.com"><div id="titulo">
+          Samsung
+        </div></a>
+        <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit dolore alias distinctio,
+            esse ipsa quasi exercitationem nemo rem odit quo. Earum nam animi sed cupiditate ea eos 
+            ipsam? Dolorum, deserunt.
+        </p>
+    </div>
+    <div class="contenedor">
         <div id="titulo">
             Apple
-        </div>
-        <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit dolore alias distinctio,
-            esse ipsa quasi exercitationem nemo rem odit quo. Earum nam animi sed cupiditate ea eos 
-            ipsam? Dolorum, deserunt.
-        </p>
-    </div>
-    <div class="contenedor">
-        <div id="titulo">
-            hola
-        </div>
-        <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit dolore alias distinctio,
-            esse ipsa quasi exercitationem nemo rem odit quo. Earum nam animi sed cupiditate ea eos 
-            ipsam? Dolorum, deserunt.
-        </p>
-    </div>
-    <div class="contenedor">
-        <div id="titulo">
-
         </div>
         <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit dolore alias distinctio,
@@ -40,7 +40,7 @@
     </div>
     <div class="contenedor">
         <div id="titulo">
-
+            LG
         </div>
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Et eligendi soluta quos eum amet 
