--- a/PracticaU2/index.html
+++ b/PracticaU2/index.html
@@ -6,17 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Pantuflas</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
 </head>
 <body>
 
     <div class="cabecera">
-        <nav>
-            <li>Carrito</li>
-            <li>Tendencias</li>
-            <li>Favoritos</li>
-            <li>Menú</li>
-        </nav>
+        <header>
+            <nav id="menu">
+                <li>Menu</li>
+                <li>Contacto</li>
+                <li>Carrito</li>
+            </nav>
+        </header>
+    </div>
+    <div class="seccion1">
+
     </div>
     
 </body>
