--- a/PracticaU2/index.html
+++ b/PracticaU2/index.html
@@ -7,20 +7,29 @@
     <title>Pantuflas</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
 
     <div class="cabecera">
         <header>
-            <nav id="menu">
-                <li>Menu</li>
-                <li>Contacto</li>
-                <li>Carrito</li>
-            </nav>
+            <img src="img/logo.png" id="logo">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">News</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">About</a></li>
+            </ul>
         </header>
     </div>
     <div class="seccion1">
-
+        <div id="imagen1">
+            <img src="img/a1veige.webp" >
+        </div>
+        <div id="texto1">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia laudantium ab, assumenda praesentium fugit doloribus provident autem soluta porro
+                 eos dolorum et nulla voluptates minus ea corrupti ducimus eligendi similique!</p>
+        </div>
     </div>
     
 </body>
