--- a/PracticaU2/index.html
+++ b/PracticaU2/index.html
@@ -9,6 +9,8 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Barlow&display=swap" rel="stylesheet"></head>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Annie+Use+Your+Telescope&display=swap" rel="stylesheet">
+
 
 <body>
     <header>
@@ -52,7 +54,7 @@
     </div>
     <div class="seccion3">
         
-        
+        <p class="tituloSec3">Combina tu estilo</p>
         <div class="foto3">
             <img src="img/model1.JPG" alt="">
             <P>STREETWEAR</P>
