--- a/basura/Actividad5/a.html
+++ b/basura/Actividad5/a.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>A</title>
+    <link rel="stylesheet" href="fontawesome/css/all.css">
     <style>
+        
         .lista{
             text-align: center;
-            list-style-type: none;
+            list-style-type: fontawesome;
         }
         li{
             display: inline-block;
