--- a/basura/Actividad6/2.html
+++ b/basura/Actividad6/2.html
@@ -31,6 +31,10 @@
         }
         .bloque img{
             width: 100%;
+            filter: sepia();
+        }
+        .bloque img:hover{
+            filter: none;
         }
         .bloque .titulo{
             background-color: rgb(197, 197, 197);
