--- a/UT2-Ejercicio2/index.html
+++ b/UT2-Ejercicio2/index.html
@@ -10,9 +10,9 @@
 <body>
     <div class="contenedor">
         <div class="subcontenedor">
+            <div class="imagenes"></div>
             <div class="triangulo"></div>
             <div class="trianguloInvert"></div>
-            <div class="texto"></div>
         </div>
     </div>
 </body>
