--- a/UT2-Proyecto/index.html
+++ b/UT2-Proyecto/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="icons/css/solid.css">
     <link rel="stylesheet" href="icons/css/fontawesome.css">
+    <link rel="stylesheet" href="icons/css/brands.css">
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web:900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="estilo.css">
 
@@ -39,9 +40,10 @@
             
         </div>
         <div class="bloque1">
-            <i id="icono" class="fas fa-pen-fancy"></i>
-            <i id="icono" class="fas fa-pencil-ruler"></i>
             <i id="icono" class="fas fa-building"></i>
+            <i id="icono" class="fas fa-pencil-ruler"></i>
+            <i id="icono" class="fas fa-pen-fancy"></i>
+
         </div>
         <div class="bloque3">
             <div class="imagenB3">
@@ -58,7 +60,22 @@
             </div>
         </div>
         <div class="footer">
-
+            <div class="localizacion">
+                <span id="titulo">Localizacion</span><br>
+                Calle falsa 123
+            </div>
+            <div class="servicios">
+                <span id="titulo">Servicios</span><br>
+                Contacta con nosotros
+            </div>
+            <div class="creador">
+                ©Diego Blanco López
+            </div>
+            <div class="redes">
+                <i class="fab fa-twitter-square" id="iconoRedes"></i>
+                <i class="fab fa-google-plus-square" id="iconoRedes"></i>
+                <i class="fab fa-facebook-square" id="iconoRedes"></i>
+            </div>
         </div>
         
     </div>
