--- a/Trimestre 2/paginaResponsive.html
+++ b/Trimestre 2/paginaResponsive.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -9,26 +10,28 @@
     <link rel="stylesheet" href="Bootstrap/bootstrap-4.4.1-dist/css/bootstrap.css">
 
     <title>Hello, world!</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <h1 class="text-info">Hello, world!</h1>
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-4 bg-danger">.col-md-4</div>
-        <div class="col-md-4 bg-info">.col-md-4</div>
-        <div class="col-md-4 bg-success">.col-md-4</div>
-      </div>
-      <div class="row">
-        <div class="col-md-8 bg-danger">.col-md-8</div>
-        <div class="col-md-4 bg-info">.col-md-4</div>
-      </div>
+        <div class="row">
+            <div class="col-12 bg-succes">Hola</div>
+        </div>
+        <div class="row">
+            <div class="col-lg-3 col-md-4 col-6 bg-success">1</div>
+            <div class="col-lg-3 col-md-4 col-6 bg-warning">2</div>
+            <div class="col-lg-3 col-md-4 col-6 bg-danger">3</div>
+            <div class="col-lg-3 col-md-4 col-6 bg-primary">4</div>
+        </div>
     </div>
 
-  
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="Bootstrap/bootstrap-4.4.1-dist/js/bootstrap.min.js" ></script>
-    
-  </body>
+    <script src="Bootstrap/bootstrap-4.4.1-dist/js/bootstrap.min.js"></script>
+
+</body>
+
 </html>
