--- a/Trimestre 2/paginaResponsive.html
+++ b/Trimestre 2/paginaResponsive.html
@@ -24,6 +24,33 @@
             <div class="col-lg-3 col-md-4 col-6 bg-danger">3</div>
             <div class="col-lg-3 col-md-4 col-6 bg-primary">4</div>
         </div>
+        <h1>Modo automatico</h1>
+        <div class="row">
+            <div class="col bg-secondary">A</div>
+            <div class="col bg-warning">B</div>
+            <div class="col bg-info">C</div>
+        </div>
+        <div class="row">
+            <div class="col bg-primary">A</div>
+            <div class="col bg-success">B</div>
+        </div>
+        <h1>Modo mIxto</h1>
+        <div class="row">
+            <div class="col bg-warning">A</div>
+            <div class="col-5 bg-danger">B</div>
+            <div class="col bg-info">C</div>
+        </div>
+        <h1>Ancho de columna variable</h1>
+        <div class="row">
+            <div class="col bg-secondary">A</div>
+            <div class="col-md-auto bg-warning">Ancho de columna variable</div>
+            <div class="col bg-secondary">B</div>
+        </div>
+        <h1>Espaciado entre columnas</h1>
+        <div class="row">
+            <div class="col-md-4 bg-secondary">A</div>
+            <div class="col-md-4 offset-md-4 bg-primary">B</div>
+        </div>
     </div>
 
 
