--- a/Trimestre 2/Boot/botones.html
+++ b/Trimestre 2/Boot/botones.html
@@ -10,6 +10,11 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <style>
+            .masGrande{
+                width: 270px;
+            }
+        </style>
     </head>
 </head>
 <body>
@@ -27,7 +32,7 @@
                 <h1>Desplegables</h1>
                 <div class="btn-group">
                     <button class="btn btn-info dropdown-toggle" data-toggle="dropdown">Botoncito desplegable preems</button>
-                    <div class="dropdown-menu">
+                    <div class="dropdown-menu masGrande">
                         <a href="" class="dropdown-item">uno</a>
                         <a href="" class="dropdown-item">dos</a>
                         <a href="" class="dropdown-item">tres</a>
