--- a/Trimestre 2/PaginaBootstrap/index.html
+++ b/Trimestre 2/PaginaBootstrap/index.html
@@ -63,7 +63,7 @@
   <!--################################################# Seccion 1 ####################################################-->
   <section class="seccion1">
     <div class="container-fluid">
-      <div class="row vh-100   ">
+      <div class="row    ">
         <div class="col-lg-10 col-md-8 col-sm-7 col-xs-12 w-100 h-100 seccion1izq text-white py-lg-3 py-sm-1 py-md-1 w-100 pr-5 ">
           <h1 class="textoGrande float-right my-auto py-5">Diseño</h1>
         </div>
