--- a/Trimestre 2/PaginaBootstrap/index.html
+++ b/Trimestre 2/PaginaBootstrap/index.html
@@ -21,7 +21,9 @@
 <body>
   <!-- ######################### CURSOR JS ########################## -->
 
-  <div class="cursor"></div>
+  <div class="cursor">
+    
+  </div>
 
   <!-- ######################### MENU DE NAVEGACION ########################## -->
 
@@ -56,6 +58,7 @@
           SITE SEARCH
         </li>
       </ul>
+      
 
     </div>
   </nav>
