--- a/Trimestre 2/PaginaBootstrap/index.html
+++ b/Trimestre 2/PaginaBootstrap/index.html
@@ -28,7 +28,7 @@
   <!-- ######################### MENU DE NAVEGACION ########################## -->
 
   <nav class="navbar navbar-expand-md navbar-light menu ">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" >
       <img src="img/logo.PNG" alt="" class="logo">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -88,7 +88,7 @@
 
   <section class="tarjetas pb-5">
 
-    <div class="container pt-5 mt-5 px-5">
+    <div class="container pt-5 mt-5 ">
       <div class="row justify-content-lg-between">
         <div class="col-md-4 col-sm-12 my-4">
           <div class="card tarjeta1  ">
@@ -145,10 +145,10 @@
   <section class="footer">
     <div class="container footer">
       <div class="iconos  align-self-center ">
-          <i class="fab fa-google-plus-g text-white"></i>
-          <i class="fab fa-facebook-f text-white "></i>
-          <i class="fab fa-twitter text-white "></i>
-          <i class="fas fa-share-alt text-white"></i>
+          <i class="social fab fa-google-plus-g text-white"></i>
+          <i class="social fab fa-facebook-f text-white "></i>
+          <i class="social fab fa-twitter text-white "></i>
+          <i class="social fas fa-share-alt text-white"></i>
       </div>
     </div>
   </section>
