--- a/Trimestre 2/PaginaBootstrap/contacto.html
+++ b/Trimestre 2/PaginaBootstrap/contacto.html
@@ -98,6 +98,42 @@
 
     </div>
   </section>
+  <hr>
+  <section>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 my-auto">
+          <form>
+            <div class="row">
+              <div class="col-12">
+                <label >Comentarios: </label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+              </div>
+            </div>
+            <div class="row">
+              <div class="form-row align-items-center">
+                <div class="col-lg-6 my-1">
+                  <div class="input-group">
+                    <div class="input-group-prepend">
+                      <div class="input-group-text">@</div>
+                    </div>
+                    <input type="text" class="form-control" id="inlineFormInputGroupUsername" placeholder="Username">
+                  </div>
+                </div>
+                
+                <div class="col-lg-6 my-1">
+                  <button type="submit" class="btn btn-primary">Submit</button>
+                </div>
+              </div>
+            </div>
+          </form>
+        </div>
+        <div class="col-lg-6">
+          <img src="img/undraw_social_girl_562b.png" class="img-fluid" alt="">
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!--###############################################################################################################-->
   <!--################################################# Footer ######################################################-->
