--- a/Trimestre 2/PaginaBootstrap/contacto.html
+++ b/Trimestre 2/PaginaBootstrap/contacto.html
@@ -45,7 +45,7 @@
           CONTACTO
         </li>
 
-        <li class="nav-item pt-5 pb-5 px-3">
+        <li class="nav-item servicios pt-5 pb-5 px-3">
           SERVICIOS
         </li>
 
@@ -65,9 +65,9 @@
 
   <!--################################################# Seccion contacto ####################################################-->
 
-  <section>
+  <section class="seccion3">
 
-    <div class="container py-5">
+    <div class="container mt-5 pt-5 ">
     
       <h1 class="titulo">Formulario de contacto</h1>
       <hr>
@@ -104,7 +104,8 @@
 
     </div>
   </section>
-  <section>
+
+  <section class="seccion4">
     
     <div class="container">
       <h1 class="titulo">Tweet about!</h1>
