--- a/Trimestre 2/PaginaBootstrap/contacto.html
+++ b/Trimestre 2/PaginaBootstrap/contacto.html
@@ -143,18 +143,83 @@
       </div>
     </div>
   </section>
-
-  <!--###############################################################################################################-->
+ <!--###############################################################################################################-->
   <!--################################################# Footer ######################################################-->
   <!--###############################################################################################################-->
   <section class="footer">
-    <div class="container footer">
-      <div class="iconos  align-self-center ">
-          <i class="social fab fa-google-plus-g text-white"></i>
-          <i class="social fab fa-facebook-f text-white "></i>
-          <i class="social fab fa-twitter text-white "></i>
-          <i class="social fas fa-share-alt text-white"></i>
+    <div class="container text-left pt-5 ">
+      <div class="row">
+        <div class="col-lg-3 col-md-6 col-sm-12 my-md-1 my-sm-1 ">
+          <div class="row">
+            Empresa
+          </div>
+          <div class="row">
+            <hr>
+          </div>
+          <div class="row">
+            Precios
+          </div>
+          <div class="row">
+            Politica de privacidad
+          </div>
+          <div class="row">
+            Politica de cookies
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 col-sm-12 my-md-1 my-sm-1">
+          <div class="row">
+            Marketing online
+          </div>
+          <div class="row">
+            <hr>
+          </div>
+          <div class="row">
+            SEO
+          </div>
+          <div class="row">
+            Social media
+          </div>
+          <div class="row">
+            Analitica web
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 col-sm-12 my-md-1 my-sm-1">
+          <div class="row">
+            Diseño web
+          </div>
+          <div class="row">
+            <hr>
+          </div>
+          <div class="row">
+            Diseño web responsive
+          </div>
+          <div class="row">
+            Web para empresas
+          </div>
+          <div class="row">
+            Tiendas online
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 col-sm-12 my-md-1 my-sm-1 ">
+          <div class="row">
+            Siguenos
+          </div>
+          <div class="row">
+            <hr>
+          </div>
+          <div class="row ">
+            <i class="fab fa-facebook-square "></i>
+          </div>
+          <div class="row">
+            <i class="fab fa-twitter"></i>
+          </div>
+          <div class="row">
+            <i class="fas fa-heart"></i>
+          </div>
+        </div>
+        
       </div>
+      
     </div>
   </section>
 
