--- a/Trimestre 2/PaginaBootstrap/index.html
+++ b/Trimestre 2/PaginaBootstrap/index.html
@@ -87,7 +87,7 @@
   <!--################################################# Fotos #######################################################-->
   <!--###############################################################################################################-->
 
-  <section class="mt-5">
+  <section class="my-5">
     <div class="container-fluid mt-5">
       <div class="row">
         <div class="col-lg-6">
@@ -119,11 +119,15 @@
           </div>
         </div>
         <div class="col-lg-6 p-5 px-5 ">
-          <h2 class="py-5">Diseñamos tu pagina web</h2>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi sunt repellat iste! Tempore harum veniam
-            ipsum. Reprehenderit nesciunt laudantium distinctio culpa explicabo maiores, doloribus corrupti earum eum,
-            officia corporis, aliquam nihil odio. Tempore neque minima atque mollitia repudiandae ea, doloribus nesciunt
-            a quia quam maiores quo, temporibus perspiciatis nobis cum!</p>
+          <h2 class="py-5 subtitulo">Diseñamos tu pagina web</h2>
+          <p class="parrafo">Cada empresa, cada iniciativa, cada proyecto cuenta con unas características únicas.
+            Siempre hemos desarrollado todos nuestros diseños web
+            de manera única y diferente, poniendo especial énfasis en la recogida de requisitos y necesidades de
+            nuestros clientes.
+            <br><br>
+            Utilizamos un sistema de gestión propio de alto rendimiento, que nos aporta seguridad y está específicamente
+            preparado para la optimización SEO. Además, te permite la auto-gestión de los contenidos de la página web,
+            como noticias, productos, servicios, etcétera.</p>
         </div>
 
       </div>
@@ -136,13 +140,79 @@
   <!--################################################# Footer ######################################################-->
   <!--###############################################################################################################-->
   <section class="footer">
-    <div class="container footer">
-      <div class="iconos  align-self-center ">
-        <i class="social fab fa-google-plus-g text-white"></i>
-        <i class="social fab fa-facebook-f text-white "></i>
-        <i class="social fab fa-twitter text-white "></i>
-        <i class="social fas fa-share-alt text-white"></i>
+    <div class="container text-left pt-5 ">
+      <div class="row">
+        <div class="col-lg-3 col-md-6 col-sm-12 my-md-1 my-sm-1 ">
+          <div class="row">
+            Empresa
+          </div>
+          <div class="row">
+            <hr>
+          </div>
+          <div class="row">
+            Precios
+          </div>
+          <div class="row">
+            Politica de privacidad
+          </div>
+          <div class="row">
+            Politica de cookies
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 col-sm-12 my-md-1 my-sm-1">
+          <div class="row">
+            Marketing online
+          </div>
+          <div class="row">
+            <hr>
+          </div>
+          <div class="row">
+            SEO
+          </div>
+          <div class="row">
+            Social media
+          </div>
+          <div class="row">
+            Analitica web
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 col-sm-12 my-md-1 my-sm-1">
+          <div class="row">
+            Diseño web
+          </div>
+          <div class="row">
+            <hr>
+          </div>
+          <div class="row">
+            Diseño web responsive
+          </div>
+          <div class="row">
+            Web para empresas
+          </div>
+          <div class="row">
+            Tiendas online
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 col-sm-12 my-md-1 my-sm-1 ">
+          <div class="row">
+            Siguenos
+          </div>
+          <div class="row">
+            <hr>
+          </div>
+          <div class="row ">
+            <i class="fab fa-facebook-square "></i>
+          </div>
+          <div class="row">
+            <i class="fab fa-twitter"></i>
+          </div>
+          <div class="row">
+            <i class="fas fa-heart"></i>
+          </div>
+        </div>
+
       </div>
+
     </div>
   </section>
 
