--- a/ProyectoFInal/home.html
+++ b/ProyectoFInal/home.html
@@ -20,10 +20,10 @@
             <nav class="menuppal d-flex justify-content-center align-items-center">
                 <ul>
                     <li>
-                        <a href="#" class="linkHome">HOME</a>
+                        <a href="home.html" class="linkHome">HOME</a>
                     </li>
                     <li>
-                        <a href="#" class="linkArtistas">ARTISTAS</a>
+                        <a href="artistas.html" class="linkArtistas">ARTISTAS</a>
                     </li>
                     <li>
                         <a href="#" class="linkContacto">CONTACTO</a>
@@ -38,7 +38,7 @@
 
             <div class="row pagina1">
                 <div class="col-lg-6 homeIzquierda  d-flex justify-content-center align-items-center">
-                    <img class="img-fluid imgPortada" src="./img/Titulo.png" alt="">
+                    <img class="img-fluid imgTitulo" src="./img/Titulo.png" alt="">
                 </div>
                 <div class="col-lg-6 homeDerecha d-flex justify-content-center align-items-center">
                     <img class="img-fluid imgPortada" src="./img/tioVolando.png" alt="">
