--- a/ProyectoFInal/artistas.html
+++ b/ProyectoFInal/artistas.html
@@ -45,10 +45,22 @@
                             <img class=" foto" src="./img/Artistas/1.png" alt="First slide">
                           </div>
                           <div class="carousel-item">
-                            <img class=" foto" src="./img/Artistas/1.png" alt="First slide">
+                            <img class=" foto" src="./img/Artistas/2.png" alt="First slide">
                           </div>
                           <div class="carousel-item">
-                            <img class=" foto" src="./img/Artistas/1.png" alt="First slide">
+                            <img class=" foto" src="./img/Artistas/3.png" alt="First slide">
+
+                          </div>
+                          <div class="carousel-item">
+                            <img class=" foto" src="./img/Artistas/4.png" alt="First slide">
+
+                          </div>
+                          <div class="carousel-item">
+                            <img class=" foto" src="./img/Artistas/5.png" alt="First slide">
+
+                          </div>
+                          <div class="carousel-item">
+                            <img class=" foto" src="./img/Artistas/6.png" alt="First slide">
 
                           </div>
                         </div>
