--- a/ProyectoFInal/contacto.html
+++ b/ProyectoFInal/contacto.html
@@ -36,15 +36,35 @@
                 <div class="_layer -bottom"></div>
             </div>
 
-            <div class="row pagina1">
-                <div class="col-lg-6 homeIzquierda  d-flex justify-content-center align-items-center">
-                    <img class="img-fluid textoPortada" src="./img/Titulo.png" alt="">
-                </div>
-                <div class="col-lg-6 homeDerecha d-flex justify-content-center align-items-center">
-                    <img class="img-fluid imgPortada" src="./img/tioVolando.png" alt="">
+            <div class="row pagina3">
+                <div class="col-12">
+                    <form class=" formulario ">
+                        <label>
+                          <p class="label-txt">Nombre</p>
+                          <input type="text" class="input">
+                          <div class="line-box">
+                            <div class="line"></div>
+                          </div>
+                        </label>
+                        <label>
+                          <p class="label-txt">Contraseña</p>
+                          <input type="password" class="input">
+                          <div class="line-box">
+                            <div class="line"></div>
+                          </div>
+                        </label>
+                        <label>
+                          <p class="label-txt">Sugerencias</p>
+                          <input type="text" class="input">
+                          <div class="line-box">
+                            <div class="line"></div>
+                          </div>
+                        </label>
+                        <button>Enviar</button>
+                      </form>
                 </div>
             </div>
-            
+
         </div>
 
     </section>
@@ -62,7 +82,7 @@
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
     <script src="efectosJquery.js"></script>
-    
+
 </body>
 
 </html>
