--- a/ProyectoFInal/artistas.html
+++ b/ProyectoFInal/artistas.html
@@ -6,7 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+  <link href="https://fonts.googleapis.com/css2?family=Calligraffitti&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Calligraffitti&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <title>Document</title>
 </head>
@@ -16,8 +18,8 @@
   <div class="menu">
 
   </div>
-  <section class="section2 ">
-    <div class="container-fluid artistas">
+  <section class="section2 pagina3 ">
+    <div class="container-fluid ">
       <nav class="menuppal d-flex justify-content-center align-items-center">
         <ul>
           <li>
@@ -37,8 +39,8 @@
         <div class="_layer -bottom"></div>
       </div>
 
-      <div class="row pagina2">
-        <div class="col-lg-6 col-md-12">
+      <div class="row artistas">
+        <div class="col-lg-6 col-md-12 d-flex justify-content-center align-items-center">
           <div class="col-lg-12 col-md-9 col-sm-12 d-flex justify-content-center align-items-center ">
             <div id="carouselExampleCaptions" class="carousel slide " data-ride="carousel">
               <ol class="carousel-indicators">
@@ -52,44 +54,46 @@
               <div class="carousel-inner ">
                 <div class="carousel-item active">
                   <img class=" foto" src="./img/Artistas/1.png" alt="First slide">
-                  <div class="carousel-caption d-none d-md-block">
-                    <h5>Nora Adame</h5>
-                    <p>“Every artist was first an amateur”</p>
+                  <div class="carousel-caption  d-md-block cita">
+                    <h5 class="nombre">Nora Adame</h5>
+                    <p>“ Every artist was first an amateur ”</p>
                   </div>
                 </div>
                 <div class="carousel-item">
                   <img class=" foto" src="./img/Artistas/2.png" alt="First slide">
-                  <div class="carousel-caption d-none d-md-block">
-                    <h5>Lubna Agha</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                  <div class="carousel-caption  d-md-block cita">
+                    <h5 class="nombre">Lubna Agha</h5>
+                    <p>“ Creativity takes courage ”</p>
                   </div>
                 </div>
                 <div class="carousel-item">
                   <img class=" foto" src="./img/Artistas/3.png" alt="First slide">
-                  <div class="carousel-caption d-none d-md-block">
-                    <h5>Vito Acconci</h5>
-                    <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                  <div class="carousel-caption  d-md-block cita">
+                    <h5 class="nombre">Vito Acconci</h5>
+                    <p>“ Every child is an artist. The problem is how to </p>
+                      <p> remain an artist once we grow up ”</p>
                   </div>
                 </div>
                 <div class="carousel-item">
                   <img class=" foto" src="./img/Artistas/4.png" alt="First slide">
-                  <div class="carousel-caption d-none d-md-block">
-                    <h5>Brigitte Alexande</h5>
-                    <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                  <div class="carousel-caption  d-md-block cita">
+                    <h5 class="nombre">Brigitte Alexande</h5>
+                    <p>“ You don’t take a photograph, you make it ”</p>
                   </div>
                 </div>
                 <div class="carousel-item">
                   <img class=" foto" src="./img/Artistas/5.png" alt="First slide">
-                  <div class="carousel-caption d-none d-md-block">
-                    <h5>Xenia Hausner</h5>
-                    <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                  <div class="carousel-caption  d-md-block cita">
+                    <h5 class="nombre">Xenia Hausner</h5>
+                    <p>“ Art enables us to find ourselves and </p>
+                      <p>lose ourselves at the same time ”</p>
                   </div>
                 </div>
                 <div class="carousel-item">
                   <img class=" foto" src="./img/Artistas/6.png" alt="First slide">
-                  <div class="carousel-caption d-none d-md-block">
-                    <h5>Lygia Pape</h5>
-                    <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                  <div class="carousel-caption  d-md-block cita">
+                    <h5 class="nombre">Lygia Pape</h5>
+                    <p>“ We don’t make mistakes, just happy little accidents ”</p>
                   </div>
                 </div>
 
@@ -107,7 +111,7 @@
 
         </div>
         <div class="col-lg-6 col-md-12 d-flex justify-content-center align-items-center">
-          <p class="tituloArtistas">Artistas</p>
+          <p class="tituloArtistas ">ARTISTAS</p>
         </div>
 
 
