--- a/ProyectoFInal/contacto.html
+++ b/ProyectoFInal/contacto.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@300&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
@@ -37,31 +39,31 @@
             </div>
 
             <div class="row pagina3">
-                <div class="col-12">
+                <div class="col-12 d-flex justify-content-center align-items-center">
                     <form class=" formulario ">
                         <label>
-                          <p class="label-txt">Nombre</p>
-                          <input type="text" class="input">
-                          <div class="line-box">
-                            <div class="line"></div>
-                          </div>
+                            <p class="label-txt">Nombre</p>
+                            <input type="text" class="input">
+                            <div class="line-box">
+                                <div class="line"></div>
+                            </div>
                         </label>
                         <label>
-                          <p class="label-txt">Contraseña</p>
-                          <input type="password" class="input">
-                          <div class="line-box">
-                            <div class="line"></div>
-                          </div>
+                            <p class="label-txt">Contraseña</p>
+                            <input type="password" class="input">
+                            <div class="line-box">
+                                <div class="line"></div>
+                            </div>
                         </label>
                         <label>
-                          <p class="label-txt">Sugerencias</p>
-                          <input type="text" class="input">
-                          <div class="line-box">
-                            <div class="line"></div>
-                          </div>
+                            <p class="label-txt">Sugerencias</p>
+                            <input type="text" class="input">
+                            <div class="line-box">
+                                <div class="line"></div>
+                            </div>
                         </label>
                         <button>Enviar</button>
-                      </form>
+                    </form>
                 </div>
             </div>
 
