--- a/ProyectoFInal/home.html
+++ b/ProyectoFInal/home.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@300&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
@@ -38,13 +40,13 @@
 
             <div class="row pagina1">
                 <div class="col-lg-6 homeIzquierda  d-flex justify-content-center align-items-center">
-                    <img class="img-fluid textoPortada" src="./img/Titulo.png" alt="">
+                    <img class="img-fluid textoPortada" src="./img/TituloFlotante.png" alt="">
                 </div>
                 <div class="col-lg-6 homeDerecha d-flex justify-content-center align-items-center">
                     <img class="img-fluid imgPortada" src="./img/tioVolando.png" alt="">
                 </div>
             </div>
-            
+
         </div>
 
     </section>
@@ -62,7 +64,7 @@
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
     <script src="efectosJquery.js"></script>
-    
+
 </body>
 
 </html>
